[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreContainer" type="MarginContainer" parent="."]
margin_right = 47.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScoreContainer"]
margin_right = 47.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="ScoreContainer/HBoxContainer"]
margin_top = 13.0
margin_right = 35.0
margin_bottom = 27.0
text = "Score"

[node name="score" type="Label" parent="ScoreContainer/HBoxContainer"]
margin_left = 39.0
margin_top = 13.0
margin_right = 47.0
margin_bottom = 27.0
text = "0"

[node name="GameOverContainer" type="VBoxContainer" parent="."]
visible = false
margin_left = 163.5
margin_top = 330.0
margin_right = 272.5
margin_bottom = 370.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOverContainer"]
margin_right = 109.0
margin_bottom = 14.0
text = "Game Over"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverContainer"]
margin_top = 18.0
margin_right = 109.0
margin_bottom = 38.0
alignment = 1

[node name="Restart" type="Button" parent="GameOverContainer/HBoxContainer"]
margin_right = 57.0
margin_bottom = 20.0
text = "Restart"
flat = true

[node name="Menu" type="Button" parent="GameOverContainer/HBoxContainer"]
margin_left = 61.0
margin_right = 109.0
margin_bottom = 20.0
text = "Menu"
flat = true

[connection signal="pressed" from="GameOverContainer/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="GameOverContainer/HBoxContainer/Menu" to="." method="_on_Menu_pressed"]
